[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Menus/SettingsMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tres/menutheme.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/MenuScripts/LevelText.gd" type="Script" id=4]
[ext_resource path="res://Scripts/MenuScripts/PauseMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/dynamicfontdata.tres" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/MenuScripts/StatContainer.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Menus/KeyBinds.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 40.0
margin_right = 707.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 336.0
margin_right = 667.0
margin_bottom = 423.0
focus_neighbour_top = NodePath("../LevelSelectButton")
theme = ExtResource( 3 )
text = "Resume"
align = 0

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_top = 427.0
margin_right = 667.0
margin_bottom = 471.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Restart Level"
align = 0

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 475.0
margin_right = 667.0
margin_bottom = 562.0
theme = ExtResource( 3 )
text = "Options"
align = 0

[node name="KeybindsButton" type="Button" parent="VBoxContainer"]
margin_top = 566.0
margin_right = 667.0
margin_bottom = 653.0
theme = ExtResource( 3 )
text = "KeyBinds"
align = 0

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
margin_top = 657.0
margin_right = 667.0
margin_bottom = 744.0
focus_neighbour_bottom = NodePath("../ResumeButton")
theme = ExtResource( 3 )
text = "Level Select"
align = 0

[node name="SettingsMenu" parent="." instance=ExtResource( 1 )]

[node name="KeyBinds" parent="." instance=ExtResource( 8 )]

[node name="GridContainer" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
margin_left = 40.0
margin_top = 20.0
margin_right = 438.0
margin_bottom = 78.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="GridContainer"]
modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
margin_top = 64.0
margin_right = 203.0
margin_bottom = 58.0
theme = ExtResource( 3 )
text = "Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelText" type="Label" parent="GridContainer"]
modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
margin_left = 220.0
margin_top = 64.0
margin_right = 1092.0
margin_bottom = 58.0
theme = ExtResource( 3 )
text = "Mercury Processing Plant"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="GridContainer"]
modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
margin_right = 188.0
margin_bottom = 58.0
theme = ExtResource( 3 )
text = "Time:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeText" type="Label" parent="GridContainer"]
modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
margin_left = 180.0
margin_right = 1584.0
margin_bottom = 58.0
theme = ExtResource( 3 )
text = "00:00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorsesLabel" type="Label" parent="GridContainer"]
modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
margin_left = 550.0
margin_right = 1862.0
margin_bottom = 58.0
theme = ExtResource( 3 )
text = "Bamboo:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorsesText" type="Label" parent="GridContainer"]
modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
margin_left = 810.0
margin_right = 1904.0
margin_bottom = 58.0
theme = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathsLabel" type="Label" parent="GridContainer"]
modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
margin_left = 1000.0
margin_right = 1092.0
margin_bottom = 120.0
theme = ExtResource( 3 )
text = "Deaths:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathsText" type="Label" parent="GridContainer"]
modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
margin_left = 1250.0
margin_right = 1134.0
margin_bottom = 120.0
theme = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/KeybindsButton" to="." method="_on_KeybindsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
